# green_function_method

./: CMakeLists.txt  README.md  analyzenet.cpp  blood.cpp  contour.cpp  contr_shade.cpp  convect.cpp  eval.cpp  gaussj.cpp  initgreens.cpp  input.cpp  ludcmp.cpp  main.cpp  outboun.cpp  picturenetwork.cpp  putrank.cpp  readsources.cpp  setuparrays2.cpp  testconvect.cpp  tissrate.cpp
datasets/Artificial_tumorcode/: recreate.py  vessels-q2d-8mm-P10-typeE-7x2L130-sample01.h5  vessels-q2d-8mm-P10-typeE-7x2L130-sample01_secombComparison.h5  vessels-q2d-8mm-P10-typeE-7x2L130_o2_secombComparison.h5
datasets/Artificial_tumorcode_compare_secomb/: vessels-default-typeE-17x1L130-sample00.h5  vessels-default-typeE-17x1L130-sample00_vessels-vessels.vtk
datasets/Artificial_tumorcode_new_vessel_tree/: notes.txt  vessels-asymmetric-typeE-5x6L130-sample00.h5  vessels-asymmetric-typeE-5x6L130-sample00_vessels-vessels.vtk
datasets/Artificial_tumorcode_new_vessel_tree_1/: notes.txt  vessels-asymmetric-typeE-9x11L130-sample00.h5  vessels-asymmetric-typeE-9x11L130-sample00_vessels-vessels.vtk
datasets/Artificial_tumorcode_new_vessel_tree_2/: notes.txt  vessels-asymmetric-typeE-17x21L130-sample00.h5  vessels-asymmetric-typeE-17x21L130-sample00_vessels-vessels.vtk
py/: secomb2hdf2.py  secombData2mpl.py  vesselhdfToSecombNetwork.py
src/: CMakeLists.txt  bicgstab.cpp  contr_shade.cpp  greens.cpp  histogram.cpp  main.cpp  nrutil.cpp  readsources.cpp  setuparrays0.cpp  setuparrays1.cpp  testconvect.cpp
