add_executable(
green_function_method 
main.cpp
analyzenet.cpp
bicgstab.cpp
blood.cpp
contour.cpp
contr_lines.cpp
contr_shade.cpp
convect.cpp
eval.cpp
gaussj.cpp
greens.cpp
histogram.cpp
initgreens.cpp
input.cpp
ludcmp.cpp
nrutil.cpp
outboun.cpp
picturenetwork.cpp
putrank.cpp
readsources.cpp
setuparrays0.cpp
setuparrays1.cpp
setuparrays2.cpp
testconvect.cpp
tissrate.cpp
)
